src/style.css
/* ... */
/* default values reset */
body { padding: 0; margin: 0; min-width: var(--viewport-min-width);}
ol, ul { padding: 0; margin: 0; list-style-type: none; }
h1, h2, p {margin: 0;}
h1 {
  color: var(--txt-col-1);
  font-size: 2rem;
  font-weight: 900;
  text-transform: uppercase;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: 1px 1px 1px hsl(240, 30%, 50%);
}
input[type="text"], input[type="date"] {
  padding: 0;
  margin: 0;
}
* {font-family: 'Times New Roman', Times, serif;}

input::selection {
  color: white;
  background-color: hsl(240, 80%, 70%);
}
input:not([type="checkbox"]):focus {
  outline: 4px solid rgba(46, 16, 192, .25);
  transition: 0ms;
}

/* menu */

#menu-button {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
  background-image: url(./media/images/icons/menu.svg);
  background-size: 100%;
  width: var(--icon-menu-size);
  height: var(--icon-menu-size);
  box-shadow: var(--card-shadow);
  background-color: var(--menu-btn-bg-col);
  transition: background-color 150ms;
}
#menu-button:hover {
  cursor: pointer;
  background-color: white;
}

#menu {
  z-index: 2;
  position: absolute;
  box-sizing: border-box;
  padding: .5rem;
  top: var(--icon-menu-size);
  left: 0;
  max-height: calc(100vh - var(--icon-menu-size));
  overflow-x: hidden;
  overflow-y: auto;
  width: var(--menu-width);
  box-shadow: var(--card-shadow);
  backdrop-filter: blur(10px);
  color: var(--txt-col-1);
  background-color: var(--menu-bg-col);
  font-size: 1.75rem;
  display: none;
}
#menu.reveal { display: block; }

#menu .menu-item {
  display: grid;
  grid-template-columns: 1fr auto auto;
  align-items: center;
  height:var(--icon-menu-size);
}

#menu .menu-item p {
  width: 200px;
  overflow: hidden;
  cursor: pointer;
}

#menu .menu-item .edit-project {
  color: var(--txt-col-1);
  font-size: 1.75rem;
  width: 200px;
}

.fieldset-list li {
  transition: padding 200ms, background-color 350ms;
}.fieldset-list li:hover {
  box-shadow: var(--card-shadow);
}

#screen-cover-menu {display: none;}
#screen-cover-menu.reveal {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
}

#menu .project-title {
  white-space: nowrap;
  overflow: hidden;
}

#menu .fieldset-options p {
  display: flex;
  width: 100%;
}

#menu a {
  text-decoration: none;
  color: inherit;
  width: 100%;
  height: 100%;
}

#menu .fieldset-options .menu-item.dark-mode {
  display: grid;
  grid-template-columns: auto 1fr;
}

.dark-mode input {
  --transition-dur: 350ms;
  --transition: background-color calc(var(--transition-dur) * .5) ease-in-out,
  transform var(--transition-dur) cubic-bezier(.68,-0.55,.27,1.55);
  appearance: unset;
  position: relative;
  width: calc(var(--icon-size) * 2);
  height: var(--icon-size);
  margin: 0;
  margin-right: .5rem;
  border-radius: 1rem;
  overflow: hidden;
  cursor: pointer;
}.dark-mode input::before {
  position: absolute;
  content: "";
  inset: 0;
  border-radius: 1rem;
  background-color: var(--bgc-page);
  box-shadow: var(--card-shadow-invert);
  transition: var(--transition);
}.dark-mode input::after {
  position: absolute;
  content: "";
  border-radius: 50%;
  height: 100%;
  aspect-ratio: 1/1;
  background-color: hsl(60, 80%, 70%);
  box-shadow: var(--card-shadow);
  transition: var(--transition);
}.dark-mode input:checked:before {
  background-color: hsl(240, 20%, 40%);
}.dark-mode input:checked::after {
  transform: translateX(100%);
  background-color: hsl(240, 30%, 75%);
}
.dark-mode label { cursor: pointer; }

#menu .fieldset-options .menu-item.about {
  --icon-size: 50px;
  --duration: 3s;
  background-size: 700%;
  background-position: bottom left;
}
#menu.reveal .fieldset-options .menu-item.about {
  background: url(./media/images/background/github-mark.svg);
  background-size: var(--icon-size);
  animation: bg-anim var(--duration) calc(var(--duration) / 5) infinite linear,
  bg-zoom-out var(--duration) cubic-bezier(.08,.82,.17,1) forwards;
}
@keyframes bg-anim {
  to { background-position: calc(var(--icon-size) * 2) calc(var(--icon-size) * -1); }
}
@keyframes bg-zoom-out {
  from { background-size: 700%; }
  to { background-size: var(--icon-size); }
}



/* main page */

.main-page-h2 {
  margin-top: 1rem;
  text-align: center;
}

.projects-container {
  padding: 1rem;
}

.card.main-page-card {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: repeat(2, 1fr);
  grid-template-areas:
  "title todos"
  "due   due  ";
  gap: 1rem;
  cursor: pointer;
  margin-bottom: .25rem;
}

.main-page-title {
  color: var(--txt-col-2);
  grid-area: title;
  white-space: nowrap;
  overflow: hidden;
}
.main-page-todos {
  color: var(--txt-col-3);
  grid-area: todos;
  justify-self: right;
}
.main-page-due {
  color: var(--txt-col-3);
  grid-area: due;
}



/* page content */

body {background-color: var(--bgc-page);}

#cards-container {
  box-sizing: border-box;
  margin: 0;
  width: 100vw;
  min-width: var(--viewport-min-width);
  height: 100vh;
  overflow: hidden;
  overflow-y: auto;
  scroll-behavior: smooth;
}

.project-item {
  box-sizing: border-box;
  padding: 1rem;
  margin: 1rem;
}

header {
  position: sticky;
  top: 0;
  z-index: 1;
  justify-content: center;
  text-align: center;
  height: var(--icon-menu-size);
  background-color: var(--bgc-page);
  box-shadow: var(--card-shadow);
  padding-left: calc(var(--icon-menu-size) + .5rem);
}
/* ... */

